--- a/TabooApp/styles.css
+++ b/TabooApp/styles.css
@@ -9,9 +9,12 @@ body {
 }
 
 button {
+    width: 95vw;
+    margin: 0 auto;
+    max-width: 800px;
     background-color: blue;
     color: white;
-    padding: 10px 20px;
+    padding: 20px;
     border: 5px solid black;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
@@ -26,7 +29,8 @@ button:active {
 }
 
 #taboo-card {    
-    width: 200px;
+    width: 95vw;
+    max-width: 800px;
     height: 2px;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -42,7 +46,8 @@ button:active {
 }
 
 #forbidden-card {
-    width: 200px;
+    width: 95vw;
+    max-width: 800px;
     height: 200px;
     margin: 0 auto;
     margin-bottom: 10px;
