--- a/TabooApp/styles.css
+++ b/TabooApp/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     font-weight: bold;
+    font-size: 5vh;
     text-align: center;
     background-color: grey;
     color: white;
@@ -9,8 +10,9 @@ body {
 }
 
 button {
+    font-size: 5vh;
     width: 95vw;
-    margin: 0 auto;
+    height: 10vh;
     background-color: blue;
     color: white;
     padding: 20px;
@@ -18,7 +20,6 @@ button {
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
     transition: all 0.1s ease;
-    position: relative;
 }
 
 button:active {    
@@ -29,7 +30,7 @@ button:active {
 
 #taboo-card {    
     width: 95vw;
-    height: 2px;
+    height: 5vh;
     margin: 0 auto;
     margin-bottom: 10px;
     padding: 20px;
@@ -45,7 +46,7 @@ button:active {
 
 #forbidden-card {
     width: 95vw;
-    height: 200px;
+    height: 55vh;
     margin: 0 auto;
     margin-bottom: 10px;
     padding: 20px;
