--- a/TabooApp/styles.css
+++ b/TabooApp/styles.css
@@ -1,8 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    font-weight: bold;
-    font-size: 5vh;
+    /*font-weight: bold;*/
+    font-size: xx-large;
     text-align: center;
+    vertical-align: top;
     background-color: grey;
     color: white;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
@@ -10,46 +11,46 @@ body {
 }
 
 button {
-    font-size: 5vh;
-    width: 95vw;
+    font-size: 4vh;
+    width: 90vw;
     height: 10vh;
+    margin: 0;
     background-color: blue;
     color: white;
-    padding: 20px;
     border: 5px solid black;
     border-radius: 10px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
-    transition: all 0.1s ease;
+    transition: all 0.1s;
 }
 
 button:active {    
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    top: 1px;
-    left: 1px;    
+    top: 3px;
+    left: 3px;    
 }
 
 #taboo-card {    
-    width: 95vw;
-    height: 5vh;
-    margin: 0 auto;
+    width: 90vw;
+    height: 10vh;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10px;
-    padding: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
     border-radius: 10px;
     border: 5px solid black;
     background-color: blue;
     color: white;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 #forbidden-card {
-    width: 95vw;
+    width: 90vw;
     height: 45vh;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10px;
-    padding: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
     border-radius: 10px;
     border: 5px solid black;
@@ -57,6 +58,7 @@ button:active {
     color: black;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
